--- a/survey.html
+++ b/survey.html
@@ -3,27 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>내가 강아지라면?</title>
+    <title>MBTI로 보는 나의 강아지 유형</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <main class="survey-screen">
-        <div class="survey-screen__column">
-            <div class="survey-screen__question">
-                <p>경쟁보다는 조화로움을 선호하는 편이다.</p>
-            </div>
-            <form action="result.html">
-                <label for=""><input type="radio" name="answer" value="yes">Yes</label><br/>
-                <label for=""><input type="radio" name="answer" value="no">No</label>
-                <p>
-                    <input type="submit" value="Submit">
-                    <input type="reset" value="Reset">
-                </p>
-            </form>
+    <header>
+        <h2>MBTI로 보는 나의 강아지 유형</h2>
+        <span></span>
+    </header>
+    <main>
+        <div class="question-container">
+            <p>나는 혼자만의<br/>시간을 가질 때</p>
+        </div>
+        <div class="check-container">
+            <button class="check">에너지가 충전된다.</button>
+            <button class="check">에너지가 충전되지 않는다.</button>
         </div>
     </main>
-    <div class="advertisement">
-        <img src="https://github.com/beeee2/dog-mbti/blob/main/img/%EA%B4%91%EA%B3%A0%20(1).png?raw=true" alt="">
-    </div>
 </body>
 </html>
