--- a/index.html
+++ b/index.html
@@ -3,21 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>내가 강아지라면?</title>
+    <title>MBTI로 보는 나의 강아지 유형</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <header class="index-title">
-        <img class="index-title__logo" src="https://github.com/beeee2/dog-mbti/blob/main/img/index__main-logo.png?raw=true" alt="">
-    </header>
+    <nav>
+        <ul>
+            <li><a href="#">home</a></li>
+            <li><a href="#">about test</a></li>
+            <li><a href="#">about us</a></li>
+            <li><a href="#">contact</a></li>
+        </ul>
+    </nav>
     <main class="index-main">
+        <span>MBTI로 보는</span>
+        <h1>나의 강아지 유형</h1>
         <img class="index-main__dog-logo" src="https://github.com/beeee2/dog-mbti/blob/main/img/index-main__dog.png?raw=true" alt="">
         <form action="survey.html">
-            <button class="index-main__startBtn" type="text">Start</button>
+            <button class="index-main__startBtn" type="text">시작하기</button>
         </form>
     </main>
-    <div class="advertisement">
-        <img src="https://github.com/beeee2/dog-mbti/blob/main/img/%EA%B4%91%EA%B3%A0%20(1).png?raw=true" alt="">
-    </div>
 </body>
 </html>
