--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <main class="index-main">
         <span>MBTI로 보는</span>
         <h1>나의 강아지 유형</h1>
-        <img class="index-main__dog-logo" src="https://github.com/beeee2/dog-mbti/blob/main/img/index-main__dog.png?raw=true" alt="">
+        <img class="index-main__dog-logo" src="https://raw.githubusercontent.com/beeee2/dog-mbti/8d85bf88497b43a1e76eb44a500e21bf9209c471/img/fur.png" alt="">
         <form action="survey.html">
             <button class="index-main__startBtn" type="text">시작하기</button>
         </form>
