--- a/result.html
+++ b/result.html
@@ -3,23 +3,88 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>내가 강아지라면?</title>
+    <title>MBTI로 보는 나의 강아지 유형</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/3c26041fb8.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="result-screen">
-        <div class="result-screen__title">
-            <p>축하합니다! 당신은 '비글'입니다.</p>
+    <header>
+        <h2>MBTI로 보는 나의 강아지 유형</h2>
+        <span></span>
+    </header>
+    <main>
+        <div class="result-screen">
+            <img src="" alt="">
+            <div class="result-screen__title">
+                <span>당신은</span>
+                <p>티베탄 테리어</p>
+            </div>
+            <div class="result-screen__text">
+                <ul>
+                    <li>&middot; 밝은 편이며 성격이 유순해요.</li>
+                    <li>&middot; 그렇게 안 보이겠지만 꽤나 적극적이고 충성심이 높아요</li>
+                    <li>&middot; 은근 고집쟁이지만 싸움을 좋아하지는 않아요</li>
+                    <li>&middot; 낯선 이에게 처음엔 경계하지만 친해지고 나면 애정이 가득해요</li>
+                </ul>
+            </div>
         </div>
-        <img src="" alt="">
-        <div class="result-screen__text">
-            새끼 시절 유달리 귀여운 외모로 보는 이들의 마음을 단순에 사로잡는 당신.
-            유순할 것만 같은 외모와 달리 내재된 엄청난 에너지를 지닌 당신은 물건을 물고 뜯고 사고칠 준비가 되어 있습니다. 
-            때로는 지나친 열정에 주인을 힘들게 할지라도 사랑받을 수 밖에 없는 당신은 강아지로 본다면 '비글'에 해당됩니다! 
+        <div class="OtherDogs">
+            <div class="recommendedDogs">
+                <div class="recommendedDogs__text">
+                    <h3>환상의 짝꿍</h3>
+                    <span>골든 리트리버</span>
+                </div>
+                <div class="recommendedDogs__img">
+                    <img src="" alt="">
+                </div>
+            </div>
+            <div class="notRecommendedDogs">
+                <div class="notRecommendedDogs__text">
+                    <h3>환장의 짝꿍</h3>
+                    <span>비글</span>
+                </div>
+                <div class="notRecommendedDogs__img">
+                    <img src="" alt="">
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="aboutOtherDogs">
-        <div class="recommended"></div>
-        <div class="notRecommended"></div>
-    </div>
+        <div class="shareBtn"> 
+            <div class="shareBtn__Kakao">
+                <button>
+                    <i class="fas fa-comment fa-2x"></i>
+                </button>
+                <span>카카오톡</span>
+            </div>
+            <div class="shareBtn__Facebook">
+                <button>
+                    <i class="fab fa-facebook-f fa-2x"></i>
+                </button>
+                <span>페이스북</span>
+            </div>
+            <div class="shareBtn__Twitter">
+                <button>
+                    <i class="fab fa-twitter fa-2x"></i>
+                </button>
+                <span>트위터</span>
+            </div>
+            <div class="shareBtn__linkCopy">
+                <button>
+                    <i class="fas fa-link fa-2x"></i>
+                </button>
+                <span>링크복사</span>
+            </div>
+        </div>
+        <div class="check-container">
+            <button class="check"><a href="survey.html">다시하기</a></button>
+        </div>
+    </main>
+    <footer>
+        <h3>개발자 소개</h3>
+        <ul>
+            <li>류대희 callmeplz@abc.com</li>
+            <li>이현비 chiupsiquezo@abc.ccom</li>
+            <li>박영규 donbulonara@abc.com</li>
+        </ul>
+    </footer>
 </body>
 </html>
