--- a/result.html
+++ b/result.html
@@ -14,17 +14,17 @@
     </header>
     <main>
         <div class="result-screen">
-            <img src="" alt="">
+            <img src="https://github.com/beeee2/dog-mbti/blob/main/img/terrier.png?raw=true" alt="">
             <div class="result-screen__title">
                 <span>당신은</span>
                 <p>티베탄 테리어</p>
             </div>
             <div class="result-screen__text">
                 <ul>
-                    <li>&middot; 밝은 편이며 성격이 유순해요.</li>
-                    <li>&middot; 그렇게 안 보이겠지만 꽤나 적극적이고 충성심이 높아요</li>
-                    <li>&middot; 은근 고집쟁이지만 싸움을 좋아하지는 않아요</li>
-                    <li>&middot; 낯선 이에게 처음엔 경계하지만 친해지고 나면 애정이 가득해요</li>
+                    <li>밝은 편이며 성격이 유순해요.</li>
+                    <li>그렇게 안 보이겠지만 꽤나 적극적이고 충성심이 높아요.</li>
+                    <li>은근 고집쟁이지만 싸움을 좋아하지는 않아요.</li>
+                    <li>낯선 이에게 처음엔 경계하지만 친해지고 나면 애정이 가득해요.</li>
                 </ul>
             </div>
         </div>
@@ -35,7 +35,7 @@
                     <span>골든 리트리버</span>
                 </div>
                 <div class="recommendedDogs__img">
-                    <img src="" alt="">
+                    <img src="https://github.com/beeee2/dog-mbti/blob/main/img/terrier.png?raw=true" alt="">
                 </div>
             </div>
             <div class="notRecommendedDogs">
@@ -44,9 +44,12 @@
                     <span>비글</span>
                 </div>
                 <div class="notRecommendedDogs__img">
-                    <img src="" alt="">
+                    <img src="https://github.com/beeee2/dog-mbti/blob/main/img/terrier.png?raw=true" alt="">
                 </div>
             </div>
+        </div>
+        <div class="perforatedLine">
+            <span></span>
         </div>
         <div class="shareBtn"> 
             <div class="shareBtn__Kakao">
