--- a/survey.html
+++ b/survey.html
@@ -15,10 +15,10 @@
         <div class="question-container">
             <p>나는 혼자만의<br/>시간을 가질 때</p>
         </div>
-        <div class="check-container">
-            <button class="check"><a href="#">에너지가 충전된다.</a></button>
-            <button class="check"><a href="result.html">에너지가 충전되지 않는다.</a></button>
-        </div>
+        <form action="result.html" class="check-container">
+            <button class="check">에너지가 충전된다.</button>
+            <button class="check">에너지가 충전되지 않는다.</button>
+        </form>
     </main>
 </body>
 </html>
