--- a/result.html
+++ b/result.html
@@ -52,25 +52,25 @@
             <span></span>
         </div>
         <div class="shareBtn"> 
-            <div class="shareBtn__Kakao">
+            <div class="shareBtn__Kakao shareBtn__Vertical">
                 <button>
                     <i class="fas fa-comment fa-2x"></i>
                 </button>
                 <span>카카오톡</span>
             </div>
-            <div class="shareBtn__Facebook">
+            <div class="shareBtn__Facebook shareBtn__Vertical">
                 <button>
                     <i class="fab fa-facebook-f fa-2x"></i>
                 </button>
                 <span>페이스북</span>
             </div>
-            <div class="shareBtn__Twitter">
+            <div class="shareBtn__Twitter shareBtn__Vertical">
                 <button>
                     <i class="fab fa-twitter fa-2x"></i>
                 </button>
                 <span>트위터</span>
             </div>
-            <div class="shareBtn__linkCopy">
+            <div class="shareBtn__linkCopy shareBtn__Vertical">
                 <button>
                     <i class="fas fa-link fa-2x"></i>
                 </button>
@@ -82,12 +82,8 @@
         </div>
     </main>
     <footer>
-        <h3>개발자 소개</h3>
-        <ul>
-            <li>류대희 callmeplz@abc.com</li>
-            <li>이현비 chiupsiquezo@abc.ccom</li>
-            <li>박영규 donbulonara@abc.com</li>
-        </ul>
+        <h3>개발자 연락처</h3>
+        <p> 류대희 이현비 박영규 | abc@naver.com</p>
     </footer>
 </body>
 </html>
