--- a/result.html
+++ b/result.html
@@ -78,7 +78,7 @@
             </div>
         </div>
         <div class="check-container">
-            <button class="check"><a href="survey.html">다시하기</a></button>
+            <button class="check"><a href="index.html">다시하기</a></button>
         </div>
     </main>
     <footer>
