--- a/result.html
+++ b/result.html
@@ -78,7 +78,9 @@
             </div>
         </div>
         <div class="check-container">
-            <button class="check"><a href="index.html">다시하기</a></button>
+            <form action="index.html">
+                <button class="check">다시하기</button>
+            </form>
         </div>
     </main>
     <footer>
