--- a/survey.html
+++ b/survey.html
@@ -150,6 +150,7 @@
     <main>
         <div class="question-container">
             <p1>나는 혼자만의<br>시간을 가질 때</p1>
+            <span>(1/12)</span>
         </div>
         <form action="result.html" class="check-container">
             <input type="button" class="check" name="btn1" id="btn1" value="에너지가 충전이 된다." onclick="change()">
