--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#">home</a></li>
-            <li><a href="#">about test</a></li>
-            <li><a href="#">about us</a></li>
-            <li><a href="#">contact</a></li>
+            <li><a href="#"target="blank">home</a></li>
+            <li><a href="#" target="blank">about test</a></li>
+            <li><a href="blog.html" target="blank">blog</a></li>
+            <li><a href="#" target="blank">contact</a></li>
         </ul>
     </nav>
     <main class="index-main">
