--- a/result.html
+++ b/result.html
@@ -6,6 +6,7 @@
     <title>MBTI로 보는 나의 강아지 유형</title>
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/3c26041fb8.js" crossorigin="anonymous"></script>
+    <script src="followmove.js" defer></script>
 </head>
 <body>
     <header>
@@ -87,5 +88,8 @@
         <h3>개발자 연락처</h3>
         <p> 류대희 이현비 박영규 | abc@naver.com</p>
     </footer>
+    <div id="followAni" class="blind-followAni">
+        <i class="fas fa-paw fa-sm"></i>
+    </div>
 </body>
 </html>
