--- a/survey.html
+++ b/survey.html
@@ -141,6 +141,8 @@
             }
         }
     </script>
+    <script src="https://kit.fontawesome.com/3c26041fb8.js" crossorigin="anonymous"></script>
+    <script src="followmove.js" defer></script>
 </head>
 <body>
     <header>
@@ -157,5 +159,8 @@
             <input type="button" class="check" name="btn2" id="btn2" value="에너지가 충전이 되지 않는다." onclick="change()">
         </form>
     </main>
+    <div id="followAni" class="blind-followAni">
+        <i class="fas fa-paw fa-sm"></i>
+    </div>
 </body>
 </html>
