--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MBTI로 보는 나의 강아지 유형</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/3c26041fb8.js" crossorigin="anonymous"></script>
+    <script src="followmove.js" defer></script>
 </head>
 <body>
     <nav>
@@ -23,5 +25,8 @@
             <button class="index-main__startBtn" type="text">시작하기</button>
         </form>
     </main>
+    <div id="followAni" class="blind-followAni">
+        <i class="fas fa-paw fa-sm"></i>
+    </div>
 </body>
 </html>
