--- a/loading.html
+++ b/loading.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MBTI로 보는 나의 강아지 유형</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/3c26041fb8.js" crossorigin="anonymous"></script>
+    <script src="followmove.js" defer></script>
 </head>
 <body>
     <div class="loading-container">
         <img src="img/foot3.png" alt="">
     </div>
     <span class="loadingSpan">Loading</span>
+    <div id="followAni" class="blind-followAni">
+        <i class="fas fa-paw fa-sm"></i>
+    </div>
 </body>
 </html>
