--- a/survey.html
+++ b/survey.html
@@ -145,6 +145,9 @@
     <script src="followmove.js" defer></script>
 </head>
 <body>
+    <div id="followAni" class="blind-followAni">
+        <i class="fas fa-paw fa-sm"></i>
+    </div>
     <header>
         <h2>MBTI로 보는 나의 강아지 유형</h2>
         <span></span>
