--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <nav>
         <ul>
             <li><a href="#"target="blank">home</a></li>
-            <li><a href="#" target="blank">about test</a></li>
             <li><a href="blog.html" target="blank">blog</a></li>
-            <li><a href="#" target="blank">contact</a></li>
+            <li><a href="#" target="blank">Study</a></li>
+            <li><a href="blog/sullen_ad.html" target="blank">For you</a></li>
         </ul>
     </nav>
     <main class="index-main">
